# datadog-datadog-agent

./: .bazelrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ASC_OWNED_CODE.txt  BUILD.bazel  CHANGELOG-DCA.rst  CHANGELOG.rst  LICENSE-3rdparty.csv  MODULE.bazel  go.mod  go.sum  macos.sh  macos_builder_setup.sh  nolimit-package-files.sh  release.json
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: buildimages-update.yml  codeql-analysis.yml  create_rc_pr.yml  cws-btfhub-sync.yml  go_mod_tidy.yml  gohai.yml  serverless-benchmarks.yml  serverless-integration.yml
.gitlab/.pre/: cancel-prev-pipelines.yml  test_gitlab_configuration.yml
.gitlab/binary_build/: cluster_agent.yml  cluster_agent_cloudfoundry.yml  cws_instrumentation.yml  linux.yml  serverless.yml  system_probe.yml  windows.yml
.gitlab/choco_build/: choco_build.yml
.gitlab/choco_deploy/: choco_deploy.yml
.gitlab/common/: container_publish_job_templates.yml  shared.yml  test_infra_version.yml
.gitlab/container_build/: docker_windows.yml  docker_windows_agent6.yml  docker_windows_agent7.yml
.gitlab/container_scan/: container_scan.yml
.gitlab/deploy_packages/: winget.yml
.gitlab/deps_build/: deps_build.yml
.gitlab/deps_fetch/: deps_fetch.yml
.gitlab/dev_container_deploy/: docker_linux.yml  docker_windows.yml
.gitlab/e2e/: e2e.yml
.gitlab/e2e_install_packages/: common.yml
.gitlab/fips/: check_symbols.yml
.gitlab/functional_test/: oracle.yml  regression_detector.yml  security_agent.yml  serverless.yml
.gitlab/functional_test_cleanup/: functional_test_cleanup.yml
.gitlab/install_script_testing/: install_script_testing.yml
.gitlab/integration_test/: dogstatsd.yml  otel.yml  windows.yml
.gitlab/internal_image_deploy/: internal_image_deploy.yml
.gitlab/internal_kubernetes_deploy/: internal_kubernetes_deploy.yml  rc_kubernetes_deploy.yml
.gitlab/kernel_matrix_testing/: common.yml  security_agent.yml  system_probe.yml
.gitlab/kitchen_deploy/: kitchen_deploy.yml
.gitlab/kitchen_testing/: windows.yml
.gitlab/lint/: linux.yml  macos.yml  windows.yml
.gitlab/notify/: notify.yml
.gitlab/package_build/: deb.yml  dmg.yml  heroku.yml  include.yml  installer.yml  linux.yml  remote_updater.yml  rpm.yml  suse_rpm.yml  windows.yml
.gitlab/package_deps_build/: package_deps_build.yml
.gitlab/packaging/: deb.yml  oci.yml  rpm.yml
.gitlab/pkg_metrics/: pkg_metrics.yml
.gitlab/post_rc_build/: post_rc_tasks.yml
.gitlab/setup/: setup.yml
.gitlab/software_composition_analysis/: software_composition_analysis.yml
.gitlab/source_test/: ebpf.yml  go_generate_check.yml  golang_deps_diff.yml  linux.yml  macos.yml  notify.yml  slack.yml  technical_linters.yml  tooling_unit_tests.yml  windows.yml
.gitlab/trigger_release/: trigger_release.yml
Dockerfiles/agent/: Dockerfile  entrypoint.sh
bazel/rules/: patch_rpath.bzl
chocolatey/: datadog-agent-offline.nuspec
cmd/agent/: BUILD.bazel  doc.go  klog.go  main.go  main_common.go  main_linux_cgo.go  main_linux_no_cgo.go  main_windows.go  process_agent.go  security_agent.go  system_probe.go  trace_agent.go
cmd/agent/command/: command.go
cmd/agent/common/: autodiscovery.go  common.go  common_windows.go  helpers.go  import.go  loader.go  test_helpers.go
cmd/agent/common/misconfig/: global.go  mounts.go
cmd/agent/common/path/: docs.go  go.mod  path_darwin.go  path_freebsd.go  path_nix.go  path_windows.go
cmd/agent/common/signals/: signals.go
cmd/agent/subcommands/: subcommands.go
cmd/agent/subcommands/check/: command.go
cmd/agent/subcommands/config/: command.go
cmd/agent/subcommands/configcheck/: command.go
cmd/agent/subcommands/diagnose/: README.md  command.go
cmd/agent/subcommands/dogstatsd/: command.go
cmd/agent/subcommands/dogstatsdstats/: command.go
cmd/agent/subcommands/flare/: command.go
cmd/agent/subcommands/health/: command.go
cmd/agent/subcommands/hostname/: command.go
cmd/agent/subcommands/import/: command.go
cmd/agent/subcommands/integrations/: command.go  command_nopython.go  integrations_darwin.go  integrations_nix.go  integrations_nix_helpers.go  integrations_windows.go
cmd/agent/subcommands/jmx/: command.go  command_nojmx.go  docs.go
cmd/agent/subcommands/launchgui/: command.go  open_browser_darwin.go  open_browser_unix.go  open_browser_windows.go
cmd/agent/subcommands/processchecks/: command.go
cmd/agent/subcommands/run/: command.go  command_notwin.go  command_windows.go  dependent_services.go  dependent_services_nix.go  dependent_services_windows.go
cmd/agent/subcommands/run/internal/settings/: runtime_setting_dogstatsd_capture_duration.go  runtime_setting_dogstatsd_stats.go  runtime_settings_multi_region_failover.go
cmd/agent/subcommands/secret/: command.go
cmd/agent/subcommands/secrethelper/: command.go
cmd/agent/subcommands/status/: command.go
cmd/agent/subcommands/stop/: command.go  command_windows.go
cmd/agent/subcommands/streamep/: command.go
cmd/agent/subcommands/streamlogs/: command.go
cmd/agent/subcommands/version/: command.go
cmd/agent/windows/service/: service.go
cmd/iot-agent/: docs.go  main.go  main_windows.go
cmd/manager/: auto_exit.go  auto_exit_noprocess.go
cmd/process-agent/: main.go
cmd/secrethelper/: secret_helper.go
cmd/serverless/: dependencies_linux_amd64.txt  dependencies_linux_arm64.txt  (+1 more)
cmd/serverless-init/: main.go
comp/: README.md
dlv_scripts/: probes_list.star
omnibus/: omnibus.rb
pkg/util/kubernetes/hostinfo/: BUILD.bazel  apiserver.go
pkg/util/kubernetes/tags/: BUILD.bazel
rtloader/: BUILD.bazel  CMakeLists.txt
rtloader/include/: datadog_agent_rtloader.h  rtloader.h
rtloader/rtloader/: api.cpp
rtloader/three/: CMakeLists.txt  three.cpp  three.h
tasks/: __init__.py  agent.py  build_tags.py  cluster_agent_helpers.py  collector.py  dogstatsd.py  fedramp.py  go.py  gotest.py  kmt.py  linter.py  modules.py  new_e2e_tests.py  omnibus.py  pipeline.py  pre_commit.py  process_agent.py  release.py  rtloader.py  sds.py  security_agent.py  system_probe.py  testwasher.py  trace_agent.py  vscode.py
(+1986 files in other folders)
