load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/DataDog/datadog-agent
# -- Gazelle excludes --
# gazelle:exclude .github/**
# gazelle:exclude .gitlab/**
# gazelle:exclude Dockerfiles/**
# gazelle:exclude chocolatey/**
# gazelle:exclude rtloader/**
# gazelle:exclude devenv/**
# gazelle:exclude docs/**
# gazelle:exclude tasks/**
# gazelle:exclude test/**

gazelle(
    name = "gazelle",
    build_tags = [
        "bundle_agent",
        # List of known tags borrowed from /tasks/build_tags.py
        "apm",
        "consul",
        "containerd",
        "cri",
        "datadog.no_waf",
        "docker",
        "ec2",
        "etcd",
        "gce",
        "jetson",
        "jmx",
        "kubeapiserver",
        "kubelet",
        "netcgo",  # Force the use of the CGO resolver. This will also have the effect of making the binary non-static
        "oracle",
        "orchestrator",
        "otlp",
        "podman",
        "process",
        "python",
        # "systemd",
        # "trivy",
        "zk",
        "zlib",
        "zstd",
        "test",  # used for unit-tests
    ],
)
