load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "rtloader",
    cache_entries = {
        "DISABLE_PYTHON2:BOOL": "ON",
        "BUILD_DEMO": "OFF",
        "CMAKE_PREFIX_PATH": "$EXT_BUILD_DEPS/python3",
        "Python3_FIND_STRATEGY": "LOCATION",
    },
    lib_source = ":srcs",
    out_shared_libs = select({
        "@platforms//os:macos": [
            "libdatadog-agent-rtloader.dylib",
            "libdatadog-agent-rtloader.1.dylib",
            "libdatadog-agent-three.dylib",
        ],
        "@platforms//os:linux": [
            "libdatadog-agent-rtloader.so",
            "libdatadog-agent-rtloader.so.1",
            "libdatadog-agent-three.so",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@python3",
    ],
)
